--- a/.env
+++ b/.env
@@ -29,5 +29,12 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/data/database.sqlite
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
