--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,5 @@
 # Define your env variables for the development environment here
+
+###> symfony/framework-bundle ###
+APP_SECRET=8cb80353a0bf56b5bf86f64f5e3001f6
+###< symfony/framework-bundle ###
