--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -4,7 +4,7 @@ on:
     pull_request:
     push:
         branches:
-            - main
+            - opentelemetry-bundle
 
 env:
     fail-fast: true
@@ -40,7 +40,7 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   coverage: "none"
-                  extensions: intl
+                  extensions: "intl, mbstring, pdo_sqlite, zip, opentelemetry"
                   php-version: ${{ matrix.php-version }}
                   tools: composer:v2
 
@@ -92,6 +92,7 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   coverage: none
+                  extensions: "intl, mbstring, pdo_sqlite, zip, opentelemetry"
                   php-version: '8.3'
 
             - name: Install dependencies
