--- a/.env
+++ b/.env
@@ -33,3 +33,6 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/data/database.sqlite
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> open-telemetry/symfony-sdk-bundle ###
+###< open-telemetry/symfony-sdk-bundle ###
