--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,23 @@
     },
     "require": {
         "php": ">=8.2",
+        "ext-opentelemetry": "*",
         "ext-pdo_sqlite": "*",
         "doctrine/dbal": "^4.0",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.0",
+        "guzzlehttp/promises": "^2.0",
         "league/commonmark": "^2.1",
+        "nyholm/psr7": "^1.8",
+        "open-telemetry/opentelemetry-auto-io": "^0.0.10",
+        "open-telemetry/opentelemetry-auto-pdo": "^0.0.11",
+        "open-telemetry/opentelemetry-auto-psr3": "^0.0.5",
+        "open-telemetry/opentelemetry-auto-psr15": "^1.0",
+        "open-telemetry/opentelemetry-auto-psr18": "^1.0",
+        "open-telemetry/opentelemetry-auto-symfony": "^1.0@beta",
+        "open-telemetry/symfony-sdk-bundle": "^0.0.23",
+        "php-http/httplug": "^2.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^7.0",
         "symfony/asset-mapper": "^7.0",
@@ -69,7 +80,8 @@
         "allow-plugins": {
             "symfony/flex": true,
             "symfony/runtime": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         },
         "platform": {
             "php": "8.2.0"
